# predict_power_consumption

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  attendorn_hourly_weather_data.csv  awtrix_client.py  config.py  docker-compose.yml  entrypoint.sh  get_power_consumption_data.py  get_weather_data  get_weather_data_6month_daily.py  get_weather_data_6months_hourly.py  get_weather_data_adorn_hourly.py  get_weather_data_adorn_hourly_api.py  get_weather_forecast.py  prepare_data.py  pyproject.toml  requirements.txt  train_ml_regression_model.py  utils.py
data/: attendorn_hourly_weather_data.csv  attendorn_hourly_weather_data.parquet  attendorn_hourly_weather_data_api.csv  attendorn_hourly_weather_data_api.parquet  attendorn_weather_data_20240925_20250324.csv  merged_data.parquet  merged_data_weather_power.parquet  model.pkl  model_2.pkl  model_weather_solar_power.pkl
