[project]
name = "predict-power-consumption"
version = "0.1.0"
description = ""
authors = [
    {name = "Faffi",email = "faffi@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "wetterdienst (>=0.107.0,<0.108.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
